Work on data table.

--- a/tables/Makefile
+++ b/tables/Makefile
@@ -2,3 +2,6 @@ all: keweenawan_poles.tex
 
 keweenawan_poles.tex: pole_means.csv keweenawan_table.py
 	python keweenawan_table.py
+
+clean:
+	rm -f keweenawan_poles.tex keweenawan_poles.aux 
