Combine a bunch of Australia figures.

--- a/figures/australia/Makefile
+++ b/figures/australia/Makefile
@@ -1,14 +1,12 @@
 .PHONY: all australia_1 australia_2
 all: australia_1 australia_2
 
-australia_1: australia_apw_path.py australia_speeds_1.pdf australia_ages_1.pdf australia_poles_1.pdf australia_paths_1.pdf
+australia_1: australia_apw_path.py australia_speeds_1.pdf australia_poles_1.pdf australia_paths_1.pdf
 
-australia_2: australia_apw_path.py australia_speeds_2.pdf australia_ages_2.pdf australia_poles_2.pdf australia_paths_2.pdf
+australia_2: australia_apw_path.py australia_speeds_2.pdf australia_poles_2.pdf australia_paths_2.pdf
 
 
 australia_speeds_1.pdf: australia_apw_path.py
-	python australia_apw_path.py 1 O,180,-19
-australia_ages_1.pdf: australia_apw_path.py
 	python australia_apw_path.py 1 O,180,-19
 australia_poles_1.pdf: australia_apw_path.py
 	python australia_apw_path.py 1 O,180,-19
@@ -16,8 +14,6 @@ australia_paths_1.pdf: australia_apw_path.py
 	python australia_apw_path.py 1 O,180,-19
 
 australia_speeds_2.pdf: australia_apw_path.py
-	python australia_apw_path.py 2 O,180,-19
-australia_ages_2.pdf: australia_apw_path.py
 	python australia_apw_path.py 2 O,180,-19
 australia_poles_2.pdf: australia_apw_path.py
 	python australia_apw_path.py 2 O,180,-19
