Update Keweenawan pole list ages.

--- a/figures/keweenawan/Makefile
+++ b/figures/keweenawan/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all keweenawan_1 keweenawan_2
+.PHONY: all keweenawan_1 keweenawan_2 clean
 all: keweenawan_1 keweenawan_2
 
 keweenawan_1: keweenawan_apw_path.py keweenawan_speeds_1.pdf keweenawan_paths_1.pdf
@@ -14,3 +14,6 @@ keweenawan_speeds_2.pdf: keweenawan_apw_path.py
 	python keweenawan_apw_path.py 2 O,240,10
 keweenawan_paths_2.pdf: keweenawan_apw_path.py
 	python keweenawan_apw_path.py 2 O,240,10
+
+clean:
+	rm -f *.pickle *.pdf
