Update to allow for TPW in the inversions.

--- a/figures/keweenawan/Makefile
+++ b/figures/keweenawan/Makefile
@@ -1,19 +1,21 @@
-.PHONY: all keweenawan_1 keweenawan_2 clean
-all: keweenawan_1 keweenawan_2
+.PHONY: all keweenawan_0_true keweenawan_1_true clean
+all: keweenawan_0_true keweenawan_1_true
 
-keweenawan_1: keweenawan_apw_path.py keweenawan_speeds_1.pdf keweenawan_paths_1.pdf
+keweenawan_0_true: keweenawan_apw_path.py keweenawan_0_true_speeds.pdf keweenawan_0_true_paths.pdf
 
-keweenawan_2: keweenawan_apw_path.py keweenawan_speeds_2.pdf keweenawan_paths_2.pdf
+keweenawan_1_true: keweenawan_apw_path.py keweenawan_1_true_speeds.pdf keweenawan_1_true_paths.pdf
 
-keweenawan_speeds_1.pdf: keweenawan_apw_path.py
-	python keweenawan_apw_path.py 1 O,240,10
-keweenawan_paths_1.pdf: keweenawan_apw_path.py
-	python keweenawan_apw_path.py 1 O,240,10
+keweenawan_0_true_speeds.pdf: keweenawan_apw_path.py
+	python keweenawan_apw_path.py 0 true O,240,10
 
-keweenawan_speeds_2.pdf: keweenawan_apw_path.py
-	python keweenawan_apw_path.py 2 O,240,10
-keweenawan_paths_2.pdf: keweenawan_apw_path.py
-	python keweenawan_apw_path.py 2 O,240,10
+keweenawan_0_true_paths.pdf: keweenawan_apw_path.py
+	python keweenawan_apw_path.py 0 true O,240,10
+
+keweenawan_1_true_speeds.pdf: keweenawan_apw_path.py
+	python keweenawan_apw_path.py 1 true O,240,10
+
+keweenawan_1_true_paths.pdf: keweenawan_apw_path.py
+	python keweenawan_apw_path.py 1 true O,240,10
 
 clean:
 	rm -f *.pickle *.pdf
