add one_euler_pole_scenario_b to Makefile

--- a/figures/synthetic/Makefile
+++ b/figures/synthetic/Makefile
@@ -3,6 +3,9 @@ all: one_euler_pole.pdf two_euler_poles.pdf age_uncertainty.pdf
 one_euler_pole.pdf: invert_one_euler_pole.py
 	python invert_one_euler_pole.py
 
+one_euler_pole_scenario_b.pdf: invert_one_euler_pole_b.py
+	python invert_one_euler_pole_b.py
+
 two_euler_poles.pdf: invert_two_euler_poles.py
 	python invert_two_euler_poles.py
 
